--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.11"
   },
   "scripts": {
