--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "portfolio",
+  "version": "0.1.0",
+  "description": "Single‑page responsive portfolio built with Tailwind v4 and jQuery",
+  "author": "smigarad <onimitchi@gmail.com>",
+  "license": "MIT",
+  "private": true,
+
   "dependencies": {
     "@tailwindcss/cli": "^4.1.11",
     "prettier": "^3.6.2",
@@ -6,7 +13,8 @@
   },
   "scripts": {
     "dev": "@tailwindcss/cli -i ./src/assets/css/tailwind.css -o ./dev/output.css",
-    "prepare": "husky"
+    "prepare": "husky",
+    "format": "prettier --write"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
@@ -20,6 +28,6 @@
     }
   },
   "lint-staged": {
-    "*.{css,html,js}": "prettier --write"
+    "*.{css,html,js,json,md}": "prettier --write"
   }
 }
