feat: adding workflows for pages

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "npx @tailwindcss/cli -i ./src/assets/css/tailwind.css -o ./dist/tailwind.css --watch",
-    "build": "npx @tailwindcss/cli -i ./src/assets/css/tailwind.css -o ./dist/tailwind.css --minify",
+    "build": "rm -rf dist && npx @tailwindcss/cli -i ./src/assets/css/tailwind.css -o ./dist/tailwind.css --minify",
     "prepare": "husky",
     "format": "prettier --write"
   },
